--- a/styles/Toolbar.module.css
+++ b/styles/Toolbar.module.css
@@ -1,8 +1,12 @@
 .main {
     width: 100%;
-    height: 50px;
+    height: 70px;
     display: flex;
     justify-content: center;
+    background-color: blue;
+    color: ghostwhite;
+    font-size: 1.5rem;
+    align-items: center;
 }
 
 .main div {
